<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/p"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <RadioGroup
        android:id="@+id/radioUmrechnung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
 
        <RadioButton
	        android:id="@+id/radioButtonPPO4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/p_po4"
			android:checked="true" />

        <RadioButton
            android:id="@+id/radioButtonPO4P"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:text="@string/po4_p" />
 
    </RadioGroup>



    <EditText
        android:id="@+id/editTextPInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/konzentration"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>




    <Button
        android:id="@+id/buttonPCalc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate" />

</LinearLayout>