<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/si"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <RadioGroup
        android:id="@+id/radioUmrechnungSi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
 
        <RadioButton
	        android:id="@+id/radioButtonSiSiO2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/si_sio2"
			android:checked="true" />

        <RadioButton
            android:id="@+id/radioButtonSiO2Si"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:text="@string/sio2_si" />
 
    </RadioGroup>



    <EditText
        android:id="@+id/editTextSiInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/konzentration"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>




    <Button
        android:id="@+id/buttonSiCalc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate" />

</LinearLayout>