<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cond20"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <RadioGroup
        android:id="@+id/radioUmrechnung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
 
        <RadioButton
	        android:id="@+id/radioButton2025"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/cond20_25"
			android:checked="true" />

        <RadioButton
            android:id="@+id/radioButton2520"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:text="@string/cond25_20" />
 
    </RadioGroup>

    <EditText
        android:id="@+id/editTextCondInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/leitf_higkeit"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonCondCalc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate" />

</LinearLayout>