<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hfromea"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editTextHfromEACaInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/calciumkonzentration_in_mg_l"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>
    
    <EditText
        android:id="@+id/editTextHfromEAMgInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/magnesiumkonzentration_in_mg_l"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>




    <Button
        android:id="@+id/buttonHEACalc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate" />

</LinearLayout>